feat: add redis and set cell logic
