# docs/swagger.json
@@ -99,13 +99,22 @@
                         "name": "cell",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Set Cell Value",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.SetCellValueBody"
+                        }
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/api.ValueResponse"
+                            "type": "string"
                         }
                     }
                 }
@@ -113,6 +122,17 @@
         }
     },
     "definitions": {
+        "api.SetCellValueBody": {
+            "type": "object",
+            "required": [
+                "value"
+            ],
+            "properties": {
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "api.ValueResponse": {
             "type": "object",
             "properties": {
